kubernetes/components/dragonfly/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow-prometheus
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9999
          protocol: TCP
  policyTypes:
    - Ingress
